@@ -1,3 +1,8 @@
+EB-2004-03-16-0: Bugfix:    mail bomb upon abort with tightly int. par. job 
+                 Issue:     637
+                 Changed:   sge_execd
+                 Review:    JG
+
 RH-2004-03-16-0: Bugfix:    host group names has to start with a '@'
                  Changed:   qconf, qmaster
                  Issue:     719, 740
